--- a/package.json
+++ b/package.json
@@ -10,11 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@reduxjs/toolkit": "^2.2.6",
     "iconsax-react-native": "^0.0.8",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-swipeable-list": "^0.1.2",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
