Setup basic Model and create many component and Routes Navigator Main SplashScreen

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.10.1",
     "@reduxjs/toolkit": "^2.2.6",
     "iconsax-react-native": "^0.0.8",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modalize": "^2.1.1",
     "react-native-portalize": "^1.0.7",
