--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "bcryptjs": "^2.4.3",
     "iconsax-react-native": "^0.0.8",
     "lodash": "^4.17.21",
     "react": "18.2.0",
@@ -39,7 +40,8 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "rn-gesture-swipeable-flatlist": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -49,6 +51,7 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
