--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-gifted-charts": "^1.4.20",
     "react-native-linear-gradient": "^2.8.3",
