--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-gifted-charts": "^1.4.20",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modalize": "^2.1.1",
     "react-native-portalize": "^1.0.7",
@@ -42,6 +43,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "rn-fetch-blob": "^0.12.0",
     "rn-gesture-swipeable-flatlist": "^2.3.1"
   },
   "devDependencies": {
