--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "iconsax-react-native": "^0.0.8",
     "lodash": "^4.17.21",
+    "query-string": "^9.1.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-date-picker": "^5.0.4",
