--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "rn-fetch-blob": "^0.12.0",
-    "rn-gesture-swipeable-flatlist": "^2.3.1"
+    "rn-gesture-swipeable-flatlist": "^2.3.1",
+    "rn-range-slider": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
