--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.3.0",
     "@react-native-firebase/firestore": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-native-firebase/storage": "^20.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
