--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "iconsax-react-native": "^0.0.8",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "query-string": "^9.1.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
